@@ -1,3 +1,8 @@
+2003-12-10  Stefan Petersen  <spe@stacken.kth.se>
+
+	* src/gerbv.c, src/gerbv_screen.h: Added Save Project and handles
+	  if a filename was given, either when loading or a previous save.
+
 2003-12-09  Stefan Petersen  <spe@stacken.kth.se>
 
 	* configure.in, */Makefile.am: Added a recursive chain of Makefile.am
